--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1510,22 +1510,27 @@ textures:
             'PE:PE-4char': [74, 206, 58, 44]
             'PE:PE-5char': [-2, 206, 68, 44]
             'PT:A-1char': [52, 466, 42, 36]
+            'PT:national-1char': [52, 466, 42, 36]
             'CH:E-1char': [52, 466, 42, 36]
             'VN:PR-1char': [52, 466, 42, 36]
             'IE:M-1char': [52, 466, 42, 36]
             'PT:A-2char': [0, 466, 46, 36]
+            'PT:national-2char': [0, 466, 46, 36]
             'CH:E-2char': [0, 466, 46, 36]
             'VN:PR-2char': [0, 466, 46, 36]
             'IE:M-2char': [0, 466, 46, 36]
             'PT:A-3char': [948, 416, 52, 36]
+            'PT:national-3char': [948, 416, 52, 36]
             'CH:E-3char': [948, 416, 52, 36]
             'VN:PR-3char': [948, 416, 52, 36]
             'IE:M-3char': [948, 416, 52, 36]
             'PT:A-4char': [884, 416, 58, 36]
+            'PT:national-4char': [884, 416, 58, 36]
             'CH:E-4char': [884, 416, 58, 36]
             'VN:PR-4char': [884, 416, 58, 36]
             'IE:M-4char': [884, 416, 58, 36]
             'PT:A-5char': [812, 416, 64, 36]
+            'PT:national-5char': [812, 416, 64, 36]
             'CH:E-5char': [812, 416, 64, 36]
             'VN:PR-5char': [812, 416, 64, 36]
             'IE:M-5char': [812, 416, 64, 36]
