had to remove SH from the India shields filter IN:SH because the green shields were showing in New Zealand

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -3865,8 +3865,7 @@ layers:
                         filter: |
                             function() {
                                 return feature.ref && (
-                                    /^IN:SH$/.test(feature.network) || 
-                                    /^SH.*$/.test(feature.ref)
+                                    /^IN:SH$/.test(feature.network)
                                 )
                             }
                         draw:
