--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1604,21 +1604,6 @@ textures:
             'ZA:P-3char': [856, 364, 58, 46]
             'ZA:P-4char': [780, 362, 70, 48]
             'ZA:P-5char': [696, 362, 78, 48]
-            'ZA:R-1char': [654, 362, 36, 36]
-            'NO:TR-1char': [654, 362, 36, 36]
-            'ZA:R-2char': [604, 362, 42, 36]
-            'NO:TR-2char': [604, 362, 42, 36]
-            'ZA:R-3char': [550, 362, 48, 36]
-            'NO:TR-3char': [550, 362, 48, 36]
-            'ZA:R-4char': [488, 362, 56, 36]
-            'NO:TR-4char': [488, 362, 56, 36]
-            'ZA:R-5char': [420, 362, 62, 36]
-            'NO:TR-5char': [420, 362, 62, 36]
-            'ZA:ZA-1char': [322, 416, 44, 44]
-            'ZA:ZA-2char': [266, 416, 50, 42]
-            'ZA:ZA-3char': [200, 416, 58, 42]
-            'ZA:ZA-4char': [128, 416, 64, 42]
-            'ZA:ZA-5char': [50, 416, 74, 42]
             'ru:national-1char': [334, 620, 42, 36]
             'GB-1char': [334, 620, 42, 36]
             'GR:GR-1char': [334, 620, 42, 36]
@@ -1702,8 +1687,28 @@ textures:
             'ru:national-6char': [0, 620, 76, 36]
             'IT:SR-6char': [0, 620, 76, 36]
             'ru:national-7char': [930, 572, 82, 36]
+            'za:national-1char': [322, 416, 44, 44]
+            'za:national-2char': [266, 416, 50, 42]
+            'za:national-3char': [200, 416, 58, 42]
+            'za:national-4char': [128, 416, 64, 42]
+            'za:national-5char': [50, 416, 74, 42]
+            'za:regional-1char': [654, 362, 36, 36]
+            'ZA:R-1char': [654, 362, 36, 36]
+            'NO:TR-1char': [654, 362, 36, 36]
+            'za:regional-2char': [604, 362, 42, 36]
+            'ZA:R-2char': [604, 362, 42, 36]
+            'NO:TR-2char': [604, 362, 42, 36]
+            'za:regional-3char': [550, 362, 48, 36]
+            'ZA:R-3char': [550, 362, 48, 36]
+            'NO:TR-3char': [550, 362, 48, 36]
+            'za:regional-4char': [488, 362, 56, 36]
+            'ZA:R-4char': [488, 362, 56, 36]
+            'NO:TR-4char': [488, 362, 56, 36]
+            'za:regional-5char': [420, 362, 62, 36]
+            'ZA:R-5char': [420, 362, 62, 36]
+            'NO:TR-5char': [420, 362, 62, 36]
             generic_shield-1char: [552, 0, 36, 36]
-            generic_shield-2char: [500, 2, 48, 32]
-            generic_shield-3char: [426, 0, 66, 36]
-            generic_shield-4char: [344, 0, 76, 36]
+            generic_shield-2char: [498, 2, 50, 32]
+            generic_shield-3char: [424, 0, 68, 36]
+            generic_shield-4char: [342, 0, 78, 36]
             generic_shield-5char: [248, 2, 90, 32]
