--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1239,11 +1239,11 @@ textures:
             'CL:CL2-3char': [782, 260, 50, 44]
             'CL:CL2-4char': [718, 260, 58, 44]
             'CL:CL2-5char': [644, 260, 66, 44]
-            'CL:VP-1char': [172, 312, 44, 44]
-            'CL:VP-2char': [122, 312, 46, 46]
-            'CL:VP-3char': [62, 312, 52, 44]
-            'CL:VP-4char': [-2, 312, 60, 44]
-            'CL:VP-5char': [940, 260, 66, 44]
+            'CL:national-1char': [172, 312, 44, 44]
+            'CL:national-2char': [122, 312, 46, 46]
+            'CL:national-3char': [62, 312, 52, 44]
+            'CL:national-4char': [-2, 312, 60, 44]
+            'CL:national-5char': [940, 260, 66, 44]
             'CN-expressways-1char': [780, 726, 52, 36]
             'CN-expressways-2char': [714, 726, 58, 36]
             'CN-expressways-3char': [642, 726, 64, 36]
