--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1240,10 +1240,15 @@ textures:
             'CL:CL2-4char': [718, 260, 58, 44]
             'CL:CL2-5char': [644, 260, 66, 44]
             'CL:national-1char': [172, 312, 44, 44]
+            'CL:regional-1char': [172, 312, 44, 44]
             'CL:national-2char': [122, 312, 46, 46]
+            'CL:regional-2char': [122, 312, 46, 46]
             'CL:national-3char': [62, 312, 52, 44]
+            'CL:regional-3char': [62, 312, 52, 44]
             'CL:national-4char': [-2, 312, 60, 44]
+            'CL:regional-4char': [-2, 312, 60, 44]
             'CL:national-5char': [940, 260, 66, 44]
+            'CL:regional-5char': [940, 260, 66, 44]
             'CN-expressways-1char': [780, 726, 52, 36]
             'CN-expressways-2char': [714, 726, 58, 36]
             'CN-expressways-3char': [642, 726, 64, 36]
@@ -1584,15 +1589,15 @@ textures:
             'TH:TM3-3char': [358, 50, 44, 44]
             'TH:TM3-4char': [296, 50, 54, 42]
             'TH:TM3-5char': [228, 50, 60, 42]
-            'TR:OR-1char': [912, 210, 48, 32]
+            'TR-roads-1char': [912, 210, 48, 32]
             'MY:E-1char': [912, 210, 48, 32]
-            'TR:OR-2char': [850, 208, 54, 36]
+            'TR-roads-2char': [850, 208, 54, 36]
             'MY:E-2char': [850, 208, 54, 36]
-            'TR:OR-3char': [784, 210, 58, 32]
+            'TR-roads-3char': [784, 210, 58, 32]
             'MY:E-3char': [784, 210, 58, 32]
-            'TR:OR-4char': [718, 208, 60, 36]
+            'TR-roads-4char': [718, 208, 60, 36]
             'MY:E-4char': [718, 208, 60, 36]
-            'TR:OR-5char': [648, 208, 64, 36]
+            'TR-roads-5char': [648, 208, 64, 36]
             'MY:E-5char': [648, 208, 64, 36]
             'ZA:M-1char': [378, 362, 36, 50]
             'ZA:M-2char': [334, 362, 36, 48]
@@ -1711,4 +1716,4 @@ textures:
             generic_shield-2char: [498, 2, 50, 32]
             generic_shield-3char: [424, 0, 68, 36]
             generic_shield-4char: [342, 0, 78, 36]
-            generic_shield-5char: [248, 2, 90, 32]
+            generic_shield-5char: [248, 0, 90, 36]
