--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1107,31 +1107,31 @@ textures:
             'AU:I3-1char': [46, 984, 36, 44]
             'MX:SH-1char': [46, 984, 36, 44]
             'NZ:SR-1char': [46, 984, 36, 44]
-            'AR:AR-1char': [46, 984, 36, 44]
+            'AR:national-1char': [46, 984, 36, 44]
             'CA:AB-1char': [46, 984, 36, 44]
             'CA:MB-1char': [46, 984, 36, 44]
             'AU:I3-2char': [0, 984, 42, 42]
             'MX:SH-2char': [0, 984, 42, 42]
             'NZ:SR-2char': [0, 984, 42, 42]
-            'AR:AR-2char': [0, 984, 42, 42]
+            'AR:national-2char': [0, 984, 42, 42]
             'CA:AB-2char': [0, 984, 42, 42]
             'CA:MB-2char': [0, 984, 42, 42]
             'AU:I3-3char': [938, 930, 46, 46]
             'MX:SH-3char': [938, 930, 46, 46]
             'NZ:SR-3char': [938, 930, 46, 46]
-            'AR:AR-3char': [938, 930, 46, 46]
+            'AR:national-3char': [938, 930, 46, 46]
             'CA:AB-3char': [938, 930, 46, 46]
             'CA:MB-3char': [938, 930, 46, 46]
             'AU:I3-4char': [878, 930, 54, 44]
             'MX:SH-4char': [878, 930, 54, 44]
             'NZ:SR-4char': [878, 930, 54, 44]
-            'AR:AR-4char': [878, 930, 54, 44]
+            'AR:national-4char': [878, 930, 54, 44]
             'CA:AB-4char': [878, 930, 54, 44]
             'CA:MB-4char': [878, 930, 54, 44]
             'AU:I3-5char': [810, 930, 62, 44]
             'MX:SH-5char': [810, 930, 62, 44]
             'NZ:SR-5char': [810, 930, 62, 44]
-            'AR:AR-5char': [810, 930, 62, 44]
+            'AR:national-5char': [810, 930, 62, 44]
             'CA:AB-5char': [810, 930, 62, 44]
             'CA:MB-5char': [810, 930, 62, 44]
             'AU:MR-1char': [472, 932, 44, 44]
