peru road shields

--- a/bubble-wrap-style.yaml
+++ b/bubble-wrap-style.yaml
@@ -3106,7 +3106,8 @@ layers:
                                 /^za:capetown.*$/.test(feature.network) ||
                                 /^motorway.*$/.test(feature.network) ||
                                 /^no:Fylkesvei.*$/.test(feature.network) ||
-                                /^no:Fylkesvei .*$/.test(feature.network)
+                                /^no:Fylkesvei .*$/.test(feature.network)||
+                                /^pe:national.*$/.test(feature.network)
                             )
                         }
                     draw:
@@ -3872,6 +3873,22 @@ layers:
                                     }
                                 text:
                                     offset: [0px, 0px]
+
+                    pe:national:
+                        filter: |
+                            function() {
+                                return feature.shield_text && (
+                                    /^pe:national$/.test(feature.network)
+                                )
+                            }
+                        draw:
+                            mapzen_icon_library:
+                                sprite: |
+                                    function() {
+                                        return ( 'PE:PE-' + feature.shield_text.length + 'char');
+                                    }
+                                text:
+                                    offset: [0px, 3px]
 
                 z-mexico-shields:
                     filter: |
