--- a/themes/bubble-wrap-icons.yaml
+++ b/themes/bubble-wrap-icons.yaml
@@ -1169,21 +1169,21 @@ textures:
             'CA:I2-3char': [536, 822, 64, 48]
             'CA:I2-4char': [458, 822, 72, 48]
             'CA:I2-5char': [370, 822, 80, 48]
-            'CA:NL-1char': [308, 208, 46, 46]
-            'CA:NL-2char': [252, 208, 48, 48]
-            'CA:NL-3char': [192, 208, 54, 46]
-            'CA:NL-4char': [124, 208, 62, 46]
-            'CA:NL-5char': [50, 208, 68, 46]
-            'CA:NL2-1char': [0, 208, 46, 46]
-            'CA:NL2-2char': [938, 154, 48, 48]
-            'CA:NL2-3char': [878, 154, 54, 46]
-            'CA:NL2-4char': [810, 154, 62, 46]
-            'CA:NL2-5char': [736, 154, 68, 46]
-            'CA:NL3-1char': [684, 154, 46, 46]
-            'CA:NL3-2char': [628, 154, 48, 48]
-            'CA:NL3-3char': [568, 154, 54, 46]
-            'CA:NL3-4char': [500, 154, 62, 46]
-            'CA:NL3-5char': [424, 154, 68, 46]
+            'CA:NB-1char': [308, 208, 46, 46]
+            'CA:NB-2char': [252, 208, 48, 48]
+            'CA:NB-3char': [192, 208, 54, 46]
+            'CA:NB-4char': [124, 208, 62, 46]
+            'CA:NB-5char': [50, 208, 68, 46]
+            'CA:NB2-1char': [0, 208, 46, 46]
+            'CA:NB2-2char': [938, 154, 48, 48]
+            'CA:NB2-3char': [878, 154, 54, 46]
+            'CA:NB2-4char': [810, 154, 62, 46]
+            'CA:NB2-5char': [736, 154, 68, 46]
+            'CA:NB3-1char': [684, 154, 46, 46]
+            'CA:NB3-2char': [628, 154, 48, 48]
+            'CA:NB3-3char': [568, 154, 54, 46]
+            'CA:NB3-4char': [500, 154, 62, 46]
+            'CA:NB3-5char': [424, 154, 68, 46]
             'CA:NS-1char': [378, 154, 36, 48]
             'CA:NS-2char': [330, 154, 40, 48]
             'CA:NS-3char': [276, 154, 48, 48]
